# python-otopi-mdp

./: .gitignore  .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
otopimdp/: __init__.py  constants.py  errors.py  parser.py  utils.py
tests/: test_parser.py  test_utils.py
