[metadata]
name=python-otopi-mdp
author=Lukas Bednar
author_email=lbenar@redhat.com
summary=Implements parser for otopi machine dialog.
description-file=README.md
license=GPLv2
keywords=
    otopi
    machine
    dialog
    parser
home-page=https://github.com/rhevm-qe-automation/python-otopi-mdp
classifier=
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Utilities
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
[files]
packages=
    otopimdp
[bdist_rpm]
requires=
    otopi
