[metadata]
name=python-otopi-mdp
author=Lukas Bednar
author_email=lbenar@redhat.com
summary=Implements parser for otopi machine dialog.
description-file=README.md
license=GPLv2
keywords=
    otopi
    machine
    dialog
home-page=https://github.com/rhevm-qe-automation/python-otopi-mdp
classifier=
    Development Status :: 3 - Alpha
    Topic :: Utilities
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX
    Programming Language :: Python
[files]
packages=
    otopimdp
[bdist_rpm]
requires=
    otopi
